--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
         After careful consideration and a generous grant from NASA, our team has determined that a woodchuck could chuck five wood, with a standard deviation of +/- .37 wood.
       </p>
       <footer>posted by Chuck Wooden</footer>
+      <form onSubmit="postComment();return false;">
+        Name: <input type="text" id="commenterName"><br>
+        Comment: <input type="textarea" id="commentText"><br>
+        <input type="submit">
+      </form>
+      <div id="comments"></div>
     </article>
+    <script id="comment-template" type="text/x-lodash-template">
+      <div className="comment">
+        <div className="comment-body"><%- comment %></div>
+        <div className="commenter">
+          <p>
+            <span class="posted-by">Posted by: </span>
+            <% if (commenter !== '') { %>
+              <%- commenter %>
+            <% } else { %>
+              Anonymous
+            <% } %>
+          </p>
+        </div>
+      </div>
+    </script>
     <script src="lodash.min.js"></script>
     <script src="index.js"></script>
   </body>
